bugs are completed and tested

--- a/2018-08-06-MediaCarouselAcc/SQL_MediaCarouselWithFrames_1_M.html
+++ b/2018-08-06-MediaCarouselAcc/SQL_MediaCarouselWithFrames_1_M.html
@@ -90,9 +90,8 @@
                                     </div>
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{1:carousel_headline}}</h3>
-                                <!-- moved to align DOM  -->
-                                <div class="carousel-content">{{{1:carousel_content}}}
-                                    <div class="carousel-blue-cta styles-for-cta c-glyph">{{1-text-forbutton}}</div>
+                                <div class="carousel-content">
+                                    <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true" role="presentation">{{1-text-forbutton}}</div>
                                 </div>
                             </mscom:link>
                         </div>
@@ -136,8 +135,8 @@
                                     </div>
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{2:carousel_headline}}</h3>
-                                <div class="carousel-content">{{{2:carousel_content}}}
-                                    <div class="carousel-blue-cta styles-for-cta c-glyph">{{2-text-forbutton}}</div>
+                                <div class="carousel-content">
+                                    <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true" role="presentation">{{2-text-forbutton}}</div>
                                 </div>
                             </mscom:link>
                         </div>
@@ -181,8 +180,8 @@
                                     </div>
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{3:carousel_headline}}</h3>
-                                <div class="carousel-content">{{{3:carousel_content}}}
-                                    <div class="carousel-blue-cta styles-for-cta c-glyph">{{3-text-forbutton}}</div>
+                                <div class="carousel-content">
+                                    <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true" role="presentation">{{3-text-forbutton}}</div>
                                 </div>
                             </mscom:link>
                         </div>
@@ -226,8 +225,8 @@
                                     </div>
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{4:carousel_headline}}</h3>
-                                <div class="carousel-content">{{{4:carousel_content}}}
-                                    <div class="carousel-blue-cta styles-for-cta c-glyph">{{4-text-forbutton}}</div>
+                                <div class="carousel-content">
+                                    <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true" role="presentation">{{4-text-forbutton}}</div>
                                 </div>
                             </mscom:link>
                         </div>
@@ -271,8 +270,8 @@
                                     </div>
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{5:carousel_headline}}</h3>
-                                <div class="carousel-content">{{{5:carousel_content}}}
-                                    <div class="carousel-blue-cta styles-for-cta c-glyph">{{5-text-forbutton}}</div>
+                                <div class="carousel-content">
+                                    <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true" role="presentation">{{5-text-forbutton}}</div>
                                 </div>
                             </mscom:link>
                         </div>
@@ -281,7 +280,6 @@
                                 <div class="carousel-thumbnail">
                                     <div class="carousel-frame-shadow show-by-default {{6:type-hide-element-to-hide-Frame-shadow}}"></div>
                                     <div class="video-link relative {{6-playicon-color}}">
-
                                         <picture>
                                             <source class='hide-by-default show-element' srcset='{{6:carousel_image-Min-1779px}}' media='(min-width:1779px)'>
                                             </source>
@@ -317,8 +315,8 @@
                                     </div>
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{6:carousel_headline}}</h3>
-                                <div class="carousel-content">{{{6:carousel_content}}}
-                                    <div class="carousel-blue-cta styles-for-cta c-glyph">{{6-text-forbutton}}</div>
+                                <div class="carousel-content">
+                                    <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true" role="presentation">{{6-text-forbutton}}</div>
                                 </div>
                             </mscom:link>
                         </div>
@@ -350,8 +348,8 @@
                                     </div>
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{7:carousel_headline}}</h3>
-                                <div class="carousel-content">{{{7:carousel_content}}}
-                                    <div class="carousel-blue-cta styles-for-cta c-glyph">{{7-text-forbutton}}</div>
+                                <div class="carousel-content">
+                                    <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true" role="presentation">{{7-text-forbutton}}</div>
                                 </div>
                             </mscom:link>
                         </div>
@@ -395,8 +393,8 @@
                                     </div>
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{8:carousel_headline}}</h3>
-                                <div class="carousel-content">{{{8:carousel_content}}}
-                                    <div class="carousel-blue-cta styles-for-cta c-glyph">{{8-text-forbutton}}</div>
+                                <div class="carousel-content">
+                                    <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true" role="presentation">{{8-text-forbutton}}</div>
                                 </div>
                             </mscom:link>
                         </div>
