coming along well

--- a/2018-08-06-MediaCarouselAcc/SQL_MediaCarouselWithFrames_1_M.html
+++ b/2018-08-06-MediaCarouselAcc/SQL_MediaCarouselWithFrames_1_M.html
@@ -51,7 +51,7 @@
                         <div class="carousel-frame" data-show="true" data-carousel-position="-2"></div>
                         <div class="carousel-frame" data-show="true" data-carousel-position="-1"></div>
                         <div class="carousel-frame" data-show="{{1:show}}" data-carousel-position="active" id="MediaSlideOne">
-                            <mscom:link href="JavaScript:void(0)" id="{{1-video-id}}" classoverride="{{1:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{1-data-player-type}}', 'data-video-url':'{{1-data-video-url}}','WCS.CN':'{{1-WCS.CN}}','aria-hidden':'false','aria-label':'{{1:aria-tag}}','tabindex':'0'}">
+                            <mscom:link href="{{1:external-link}}" md:payloadguid="{{1:internal-link}}" id="{{1-video-id}}" classoverride="{{1:open-popup-video}} carousel-frame-link" htmlcustomattributes="{'data-player-type':'{{1-data-player-type}}', 'data-video-url':'{{1-data-video-url}}','WCS.CN':'{{1-WCS.CN}}','aria-hidden':'false','aria-label':'{{1:aria-tag}}','tabindex':'0'}">
                                 <div class="carousel-thumbnail">
                                     <div class="carousel-frame-shadow show-by-default {{1:type-hide-element-to-hide-Frame-shadow}}"></div>
                                     <div class="video-link relative {{1-playicon-color}}">
@@ -96,7 +96,7 @@
                             </mscom:link>
                         </div>
                         <div class="carousel-frame" data-show="{{2:show}}" data-carousel-position="0" id="MediaSlideTwo">
-                            <mscom:link href="JavaScript:void(0)" id="{{2-video-id}}" classoverride="{{2:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{2-data-player-type}}', 'data-video-url':'{{2-data-video-url}}','WCS.CN':'{{2-WCS.CN}}','aria-hidden':'true','aria-label':'{{2:aria-tag}}'}">
+                            <mscom:link href="{{2:external-link}}" md:payloadguid="{{2:internal-link}}" id="{{2-video-id}}" classoverride="{{2:open-popup-video}} carousel-frame-link" htmlcustomattributes="{'data-player-type':'{{2-data-player-type}}', 'data-video-url':'{{2-data-video-url}}','WCS.CN':'{{2-WCS.CN}}','aria-hidden':'true','aria-label':'{{2:aria-tag}}'}">
                                 <div class="carousel-thumbnail">
                                     <div class="carousel-frame-shadow show-by-default {{2:type-hide-element-to-hide-Frame-shadow}}"></div>
                                     <div class="video-link relative {{2-playicon-color}}">
@@ -141,7 +141,7 @@
                             </mscom:link>
                         </div>
                         <div class="carousel-frame" data-show="{{3:show}}" data-carousel-position="1" id="MediaSlideThree">
-                            <mscom:link href="JavaScript:void(0)" id="{{3-video-id}}" classoverride="{{3:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{3-data-player-type}}', 'data-video-url':'{{3-data-video-url}}','WCS.CN':'{{3-WCS.CN}}','aria-hidden':'true','aria-label':'{{3:aria-tag}}'}">
+                            <mscom:link href="{{3:external-link}}" md:payloadguid="{{3:internal-link}}" id="{{3-video-id}}" classoverride="{{3:open-popup-video}} carousel-frame-link" htmlcustomattributes="{'data-player-type':'{{3-data-player-type}}', 'data-video-url':'{{3-data-video-url}}','WCS.CN':'{{3-WCS.CN}}','aria-hidden':'true','aria-label':'{{3:aria-tag}}'}">
                                 <div class="carousel-thumbnail">
                                     <div class="carousel-frame-shadow show-by-default {{3:type-hide-element-to-hide-Frame-shadow}}"></div>
                                     <div class="video-link relative {{3-playicon-color}}">
@@ -186,7 +186,7 @@
                             </mscom:link>
                         </div>
                         <div class="carousel-frame" data-show="{{4:show}}" data-carousel-position="2" id="MediaSlideFour">
-                            <mscom:link href="JavaScript:void(0)" id="{{4-video-id}}" classoverride="{{4:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{4-data-player-type}}', 'data-video-url':'{{4-data-video-url}}','WCS.CN':'{{4-WCS.CN}}','aria-hidden':'true','aria-label':'{{4:aria-tag}}'}">
+                            <mscom:link href="{{4:external-link}}" md:payloadguid="{{4:internal-link}}" id="{{4-video-id}}" classoverride="{{4:open-popup-video}} carousel-frame-link" htmlcustomattributes="{'data-player-type':'{{4-data-player-type}}', 'data-video-url':'{{4-data-video-url}}','WCS.CN':'{{4-WCS.CN}}','aria-hidden':'true','aria-label':'{{4:aria-tag}}'}">
                                 <div class="carousel-thumbnail">
                                     <div class="carousel-frame-shadow show-by-default {{4:type-hide-element-to-hide-Frame-shadow}}"></div>
                                     <div class="video-link relative {{4-playicon-color}}">
@@ -231,7 +231,7 @@
                             </mscom:link>
                         </div>
                         <div class="carousel-frame" data-show="{{5:show}}" data-carousel-position="3" id="MediaSlideFive">
-                            <mscom:link href="JavaScript:void(0)" id="{{5-video-id}}" classoverride="{{5:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{5-data-player-type}}', 'data-video-url':'{{5-data-video-url}}','WCS.CN':'{{5-WCS.CN}}','aria-hidden':'true','aria-label':'{{5:aria-tag}}'}">
+                            <mscom:link href="{{5:external-link}}" md:payloadguid="{{5:internal-link}}" id="{{5-video-id}}" classoverride="{{5:open-popup-video}} carousel-frame-link" htmlcustomattributes="{'data-player-type':'{{5-data-player-type}}', 'data-video-url':'{{5-data-video-url}}','WCS.CN':'{{5-WCS.CN}}','aria-hidden':'true','aria-label':'{{5:aria-tag}}'}">
                                 <div class="carousel-thumbnail">
                                     <div class="carousel-frame-shadow show-by-default {{5:type-hide-element-to-hide-Frame-shadow}}"></div>
                                     <div class="video-link relative {{5-playicon-color}}">
@@ -276,7 +276,7 @@
                             </mscom:link>
                         </div>
                         <div class="carousel-frame" data-show="{{6:show}}" data-carousel-position="4" id="MediaSlideSix">
-                            <mscom:link href="JavaScript:void(0)" id="{{6-video-id}}" classoverride="{{6:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{6-data-player-type}}', 'data-video-url':'{{6-data-video-url}}','WCS.CN':'{{6-WCS.CN}}','aria-label':'{{6:aria-tag}}'}">
+                            <mscom:link href="{{6:external-link}}" md:payloadguid="{{6:internal-link}}" id="{{6-video-id}}" classoverride="{{6:open-popup-video}} carousel-frame-link" htmlcustomattributes="{'data-player-type':'{{6-data-player-type}}', 'data-video-url':'{{6-data-video-url}}','WCS.CN':'{{6-WCS.CN}}','aria-label':'{{6:aria-tag}}'}">
                                 <div class="carousel-thumbnail">
                                     <div class="carousel-frame-shadow show-by-default {{6:type-hide-element-to-hide-Frame-shadow}}"></div>
                                     <div class="video-link relative {{6-playicon-color}}">
@@ -321,7 +321,7 @@
                             </mscom:link>
                         </div>
                         <div class="carousel-frame" data-show="{{7:show}}" data-carousel-position="5" id="MediaSlideSeven">
-                            <mscom:link href="JavaScript:void(0)" id="{{7-video-id}}" classoverride="{{7:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{7-data-player-type}}', 'data-video-url':'{{7-data-video-url}}','WCS.CN':'{{7-WCS.CN}}','aria-label':'{{7:aria-tag}}'}">
+                            <mscom:link href="{{7:external-link}}" md:payloadguid="{{7:internal-link}}" id="{{7-video-id}}" classoverride="{{7:open-popup-video}} carousel-frame-link" htmlcustomattributes="{'data-player-type':'{{7-data-player-type}}', 'data-video-url':'{{7-data-video-url}}','WCS.CN':'{{7-WCS.CN}}','aria-label':'{{7:aria-tag}}'}">
                                 <div class="carousel-thumbnail">
                                     <div class="carousel-frame-shadow show-by-default {{7:type-hide-element-to-hide-Frame-shadow}}"></div>
                                     <div class="video-link relative {{7-playicon-color}}">
@@ -354,7 +354,7 @@
                             </mscom:link>
                         </div>
                         <div class="carousel-frame" data-show="{{8:show}}" data-carousel-position="6">
-                            <mscom:link href="JavaScript:void(0)" id="{{8-video-id}}" classoverride="{{8:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{8-data-player-type}}', 'data-video-url':'{{8-data-video-url}}','WCS.CN':'{{8-WCS.CN}}','aria-hidden':'true','aria-label':'{{8:aria-tag}}'}">
+                            <mscom:link href="{{8:external-link}}" md:payloadguid="{{8:internal-link}}" id="{{8-video-id}}" classoverride="{{8:open-popup-video}} carousel-frame-link" htmlcustomattributes="{'data-player-type':'{{8-data-player-type}}', 'data-video-url':'{{8-data-video-url}}','WCS.CN':'{{8-WCS.CN}}','aria-hidden':'true','aria-label':'{{8:aria-tag}}'}">
                                 <div class="carousel-thumbnail">
                                     <div class="carousel-frame-shadow show-by-default {{8:type-hide-element-to-hide-Frame-shadow}}"></div>
                                     <div class="video-link relative {{8-playicon-color}}">
