couple of tweaks to Carousel and added training folder and C# project

--- a/2018-08-06-MediaCarouselAcc/SQL_MediaCarouselWithFrames_1_M.html
+++ b/2018-08-06-MediaCarouselAcc/SQL_MediaCarouselWithFrames_1_M.html
@@ -107,6 +107,7 @@
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{1:carousel_headline}}</h3>
                                 <div class="carousel-content">
+                                    <p class="c-paragraph-4 c-paragraph-3 x-hidden-focus" style="height: 52px;">{{1:slide_paragraph}}</p>
                                     <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true"
                                         role="presentation" ms.ea_action="{{1-ms.ea-action}}" ms.ea_offer="{{1-ms.ea-offer}}">{{1-text-forbutton}}</div>
                                 </div>
@@ -169,6 +170,7 @@
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{2:carousel_headline}}</h3>
                                 <div class="carousel-content">
+                                    <p class="c-paragraph-4 c-paragraph-3 x-hidden-focus" style="height: 52px;">{{2:slide_paragraph}}</p>
                                     <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true"
                                         role="presentation" ms.ea_action="{{2-ms.ea-action}}" ms.ea_offer="{{2-ms.ea-offer}}">{{2-text-forbutton}}</div>
                                 </div>
@@ -231,6 +233,7 @@
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{3:carousel_headline}}</h3>
                                 <div class="carousel-content">
+                                    <p class="c-paragraph-4 c-paragraph-3 x-hidden-focus" style="height: 52px;">{{3:slide_paragraph}}</p>
                                     <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true"
                                         role="presentation" ms.ea_action="{{3-ms.ea-action}}" ms.ea_offer="{{3-ms.ea-offer}}">{{3-text-forbutton}}</div>
                                 </div>
@@ -293,6 +296,7 @@
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{4:carousel_headline}}</h3>
                                 <div class="carousel-content">
+                                    <p class="c-paragraph-4 c-paragraph-3 x-hidden-focus" style="height: 52px;">{{4:slide_paragraph}}</p>
                                     <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true"
                                         role="presentation" ms.ea_action="{{4-ms.ea-action}}" ms.ea_offer="{{4-ms.ea-offer}}">{{4-text-forbutton}}</div>
                                 </div>
@@ -355,6 +359,7 @@
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{5:carousel_headline}}</h3>
                                 <div class="carousel-content">
+                                    <p class="c-paragraph-4 c-paragraph-3 x-hidden-focus" style="height: 52px;">{{5:slide_paragraph}}</p>
                                     <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true"
                                         role="presentation" ms.ea_action="{{5-ms.ea-action}}" ms.ea_offer="{{5-ms.ea-offer}}">{{5-text-forbutton}}</div>
                                 </div>
@@ -417,6 +422,7 @@
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{6:carousel_headline}}</h3>
                                 <div class="carousel-content">
+                                    <p class="c-paragraph-4 c-paragraph-3 x-hidden-focus" style="height: 52px;">{{6:slide_paragraph}}</p>
                                     <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true"
                                         role="presentation" ms.ea_action="{{6-ms.ea-action}}" ms.ea_offer="{{6-ms.ea-offer}}">{{6-text-forbutton}}</div>
                                 </div>
@@ -461,6 +467,7 @@
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{7:carousel_headline}}</h3>
                                 <div class="carousel-content">
+                                    <p class="c-paragraph-4 c-paragraph-3 x-hidden-focus" style="height: 52px;">{{7:slide_paragraph}}</p>
                                     <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true"
                                         role="presentation" ms.ea_action="{{7-ms.ea-action}}" ms.ea_offer="{{7-ms.ea-offer}}">{{7-text-forbutton}}</div>
                                 </div>
@@ -523,6 +530,7 @@
                                 </div>
                                 <h3 class="c-heading-5 carousel-headline semi-bold">{{8:carousel_headline}}</h3>
                                 <div class="carousel-content">
+                                    <p class="c-paragraph-4 c-paragraph-3 x-hidden-focus" style="height: 52px;">{{8:slide_paragraph}}</p>
                                     <div class="carousel-blue-cta c-call-to-action styles-for-cta c-glyph" aria-hidden="true"
                                         role="presentation" ms.ea_action="{{8-ms.ea-action}}" ms.ea_offer="{{8-ms.ea-offer}}">{{8-text-forbutton}}</div>
                                 </div>
