--- a/2018-08-06-MediaCarouselAcc/SQL_MediaCarouselWithFrames_1_M.html
+++ b/2018-08-06-MediaCarouselAcc/SQL_MediaCarouselWithFrames_1_M.html
@@ -99,8 +99,9 @@
                                             <source class='hide-by-default show-element' srcset='{{play_button_image}}'
                                                 media='(min-width:0)'>
                                             </source>
-                                            <img srcset='{{play_button_image}}' role="presentation" aria-hidden="true"
-                                                class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
+                                            <img srcset='{{play_button_image}}' data-hover-image="{{play_button_image_hover}}"
+                                                role="presentation" aria-hidden="true" class="play-button"
+                                                data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
                                                 alt="" src="{{play_button_image}}">
                                         </picture>
                                     </div>
@@ -162,8 +163,9 @@
                                             <source class='hide-by-default show-element' srcset='{{play_button_image}}'
                                                 media='(min-width:0)'>
                                             </source>
-                                            <img srcset='{{play_button_image}}' role="presentation" aria-hidden="true"
-                                                class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
+                                            <img srcset='{{play_button_image}}' data-hover-image="{{play_button_image_hover}}"
+                                                role="presentation" aria-hidden="true" class="play-button"
+                                                data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
                                                 alt="" src="{{play_button_image}}">
                                         </picture>
                                     </div>
@@ -225,8 +227,9 @@
                                             <source class='hide-by-default show-element' srcset='{{play_button_image}}'
                                                 media='(min-width:0)'>
                                             </source>
-                                            <img srcset='{{play_button_image}}' role="presentation" aria-hidden="true"
-                                                class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
+                                            <img srcset='{{play_button_image}}' data-hover-image="{{play_button_image_hover}}"
+                                                role="presentation" aria-hidden="true" class="play-button"
+                                                data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
                                                 alt="" src="{{play_button_image}}">
                                         </picture>
                                     </div>
@@ -288,8 +291,9 @@
                                             <source class='hide-by-default show-element' srcset='{{play_button_image}}'
                                                 media='(min-width:0)'>
                                             </source>
-                                            <img srcset='{{play_button_image}}' role="presentation" aria-hidden="true"
-                                                class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
+                                            <img srcset='{{play_button_image}}' data-hover-image="{{play_button_image_hover}}"
+                                                role="presentation" aria-hidden="true" class="play-button"
+                                                data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
                                                 alt="" src="{{play_button_image}}">
                                         </picture>
                                     </div>
@@ -351,8 +355,9 @@
                                             <source class='hide-by-default show-element' srcset='{{play_button_image}}'
                                                 media='(min-width:0)'>
                                             </source>
-                                            <img srcset='{{play_button_image}}' role="presentation" aria-hidden="true"
-                                                class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
+                                            <img srcset='{{play_button_image}}' data-hover-image="{{play_button_image_hover}}"
+                                                role="presentation" aria-hidden="true" class="play-button"
+                                                data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
                                                 alt="" src="{{play_button_image}}">
                                         </picture>
                                     </div>
@@ -414,8 +419,9 @@
                                             <source class='hide-by-default show-element' srcset='{{play_button_image}}'
                                                 media='(min-width:0)'>
                                             </source>
-                                            <img srcset='{{play_button_image}}' role="presentation" aria-hidden="true"
-                                                class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
+                                            <img srcset='{{play_button_image}}' data-hover-image="{{play_button_image_hover}}"
+                                                role="presentation" aria-hidden="true" class="play-button"
+                                                data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
                                                 alt="" src="{{play_button_image}}">
                                         </picture>
                                     </div>
@@ -459,9 +465,28 @@
                                                 role="presentation" aria-hidden="true" alt="" src="{{7:carousel_image}}">
                                         </picture>
                                         <picture>
-                                            <img role="presentation" aria-hidden="true" class="play-button"
+                                            <source class='hide-by-default show-element' srcset='{{play_button_image-Min-1779px}}'
+                                                media='(min-width:1779px)'>
+                                            </source>
+                                            <source class='hide-by-default show-element' srcset='{{play_button_image-Min-1400px}}'
+                                                media='(min-width:1400px)'>
+                                            </source>
+                                            <source class='hide-by-default show-element' srcset='{{play_button_image-Min-1084px}}'
+                                                media='(min-width:1084px)'>
+                                            </source>
+                                            <source class='hide-by-default show-element' srcset='{{play_button_image-Min-768px}}'
+                                                media='(min-width:768px)'>
+                                            </source>
+                                            <source class='hide-by-default show-element' srcset='{{play_button_image}}'
+                                                media='(min-width:540px)'>
+                                            </source>
+                                            <source class='hide-by-default show-element' srcset='{{play_button_image}}'
+                                                media='(min-width:0)'>
+                                            </source>
+                                            <img srcset='{{play_button_image}}' data-hover-image="{{play_button_image_hover}}"
+                                                role="presentation" aria-hidden="true" class="play-button"
                                                 data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
-                                                alt="{{play_button_image_alt}}" src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/REPWBY">
+                                                alt="" src="{{play_button_image}}">
                                         </picture>
                                     </div>
                                 </div>
@@ -522,8 +547,9 @@
                                             <source class='hide-by-default show-element' srcset='{{play_button_image}}'
                                                 media='(min-width:0)'>
                                             </source>
-                                            <img srcset='{{play_button_image}}' role="presentation" aria-hidden="true"
-                                                class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
+                                            <img srcset='{{play_button_image}}' data-hover-image="{{play_button_image_hover}}"
+                                                role="presentation" aria-hidden="true" class="play-button"
+                                                data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
                                                 alt="" src="{{play_button_image}}">
                                         </picture>
                                     </div>
