no real progress - just found that this ug has been around a long time

--- a/2018-10-29-sql-server-2017-feature-VideoCloseAccessability/copyHTMLfromSite.html
+++ b/2018-10-29-sql-server-2017-feature-VideoCloseAccessability/copyHTMLfromSite.html
@@ -22,3 +22,35 @@
     <a href="#" class="dummy-lnk" tabindex="0"></a>
 </div>
 
+
+
+<div class="custom-popup-background" aria-hidden="true">
+    <div class="custom-popup-container" role="dialog">
+        <a tabindex="-1" class="dummy-link-top"></a>
+        <a tabindex="-1" class="close-button"></a>
+        <div class="custom-popup-video-container">
+            <iframe src="" tabindex="-1" id="custom-youtube-iframe" class="dn" allowfullscreen="true"></iframe>
+            <video src="" id="custom-html5-iframe" controls="true" autoplay="true" class="dn"></video>
+            <iframe src="" tabindex="-1" id="custom-channel9-iframe" allowfullscreen="true"></iframe>
+            <iframe src="" tabindex="-1" id="custom-demomate-iframe" allowfullscreen="true" class="iframeBorder"></iframe>
+        </div>
+        <div class="social-share"><span>Share this video</span>
+            <ul class="social-popup-share">
+                <li><span class="popup-tooltip">Facebook share</span><a href="http://www.facebook.com/sqlserver/" tabindex="-1" aria-label="Share on Facebook" class="facebook"><img src="/en-us/CMSImages/fb.jpg?version=710af7be-706a-1b6e-7cf5-fcacc35f02c3&amp;CollectionId=b3019376-daef-4872-8d96-3090b437de8a" class="mscom-image mscom-image relative " alt="Share on Facebook" width="24" height="24"></a></li>
+                <li><a href="http://twitter.com/SQLServer" tabindex="-1" aria-label="Share on Twitter" class="twitter"><img src="/en-us/CMSImages/twitter.jpg?version=b7f90e5e-91f4-18f2-42cd-335743c9b839&amp;CollectionId=b3019376-daef-4872-8d96-3090b437de8a" class="mscom-image mscom-image relative" alt="Share on Twitter" width="24" height="24"></a><a tabindex="-1" class="dummy-link"></a></li>
+                <span class="popup-tooltip2">Twitter Share</span>
+            </ul>
+        </div>
+    </div>
+</div>
+
+
+<div class="page-frame-popup-background" aria-hidden="true">
+    <div class="page-frame-popup-container">
+        <a tabindex="-1" class="close-button"></a>
+        <div class="page-frame-container">
+            <iframe src="" tabindex="-1" id="page-frame-iframe" class="dn"></iframe>
+        </div>
+        <a tabindex="-1" class="dummy-link"></a>
+    </div>
+</div>
