--- a/ArchivedProjects/2018-10-15-CloseButton-LostFocus-Bug-349670/SQL_5PillarsOverlayContent_1_M.html
+++ b/ArchivedProjects/2018-10-15-CloseButton-LostFocus-Bug-349670/SQL_5PillarsOverlayContent_1_M.html
@@ -12,24 +12,24 @@
                     <div class="pillar-item pillar-1 {{1:pillar-bgcolor}} {{1:type-disable-popup}}">
                         <div class="pillar-content">
                             <picture>
-
                                 <source class='hide-by-default show-element' srcset='{{1:img-id}}' media='(min-width:540px)' />
-                                <source class='hide-by-default show-element' srcset='{{1:img-id}}' media='(min-width:0)' /><img
-                                    srcset='{{1:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
-                                    alt="{{1:img-alt}}" src="{{1:img-id}}"></picture>
+                                <source class='hide-by-default show-element' srcset='{{1:img-id}}' media='(min-width:0)' />
+                                <img srcset='{{1:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
+                                    alt="{{1:img-alt}}" src="{{1:img-id}}">
+                                </picture>
                             <h3 class="column-title pt-0 pb-0 c-heading-5">{{1:column-title}}</h3>
                             <p class="body-alt pt-2 c-paragraph-3">{{1:column-paragraph}}</p>
                             <div class="text-center mt-0">{{{1:links}}}</div>
                         </div>
-                        <div role="dialog" class="pillar-popup">
-
+                        <!-- aria-labelledby="pillarPopup1_label" aria-modal="true"  -->
+                        <div role="dialog" class="pillar-popup" aria-labelledby="pillarPopup1_label" aria-modal="true" >
                             <picture>
-
                                 <source class='hide-by-default show-element' srcset='{{1:img-id}}' media='(min-width:540px)' />
-                                <source class='hide-by-default show-element' srcset='{{1:img-id}}' media='(min-width:0)' /><img
-                                    srcset='{{1:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
-                                    alt="{{1:img-alt}}" src="{{1:img-id}}"></picture>
-                            <h3 class="column-title pt-0 pb-0 c-heading-5">{{1:column-title}}</h3>
+                                <source class='hide-by-default show-element' srcset='{{1:img-id}}' media='(min-width:0)' />
+                                <img srcset='{{1:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
+                                    alt="{{1:img-alt}}" src="{{1:img-id}}">
+                            </picture>
+                            <h3 id="pillarPopup1_label" class="column-title pt-0 pb-0 c-heading-5">{{1:column-title}}</h3>
 
                             <div class="body-alt">
                                 <p class="c-paragraph-3">{{1:column-paragraph}}</p>
@@ -40,30 +40,28 @@
                             </div>
                             <a class="c-glyph pillar-close-button" aria-label="close" role="button" href="#"></a>
                         </div>
-
                     </div>
 
                     <div class="pillar-item pillar-2 {{2:pillar-bgcolor}} {{2:type-disable-popup}}">
                         <div class="pillar-content">
                             <picture>
-
                                 <source class='hide-by-default show-element' srcset='{{2:img-id}}' media='(min-width:540px)' />
-                                <source class='hide-by-default show-element' srcset='{{2:img-id}}' media='(min-width:0)' /><img
-                                    srcset='{{2:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
-                                    alt="{{2:img-alt}}" src="{{2:img-id}}"></picture>
+                                <source class='hide-by-default show-element' srcset='{{2:img-id}}' media='(min-width:0)' />
+                                <img srcset='{{2:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
+                                    alt="{{2:img-alt}}" src="{{2:img-id}}">
+                            </picture>
                             <h3 class="column-title pt-0 pb-0 c-heading-5">{{2:column-title}}</h3>
                             <p class="body-alt pt-2 c-paragraph-3">{{2:column-paragraph}}</p>
                             <div class="text-center mt-0">{{{2:links}}}</div>
                         </div>
-                        <div role="dialog" class="pillar-popup">
-
+                        <div role="dialog" class="pillar-popup" aria-labelledby="pillarPopup2_label" aria-modal="true">
                             <picture>
-
                                 <source class='hide-by-default show-element' srcset='{{2:img-id}}' media='(min-width:540px)' />
-                                <source class='hide-by-default show-element' srcset='{{2:img-id}}' media='(min-width:0)' /><img
-                                    srcset='{{2:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
-                                    alt="{{2:img-alt}}" src="{{2:img-id}}"></picture>
-                            <h3 class="column-title pt-0 pb-0 c-heading-5">{{2:column-title}}</h3>
+                                <source class='hide-by-default show-element' srcset='{{2:img-id}}' media='(min-width:0)' />
+                                <img srcset='{{2:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
+                                    alt="{{2:img-alt}}" src="{{2:img-id}}">
+                            </picture>
+                            <h3 id="pillarPopup2_label" class="column-title pt-0 pb-0 c-heading-5">{{2:column-title}}</h3>
                             <div class="body-alt">
                                 <p class="c-paragraph-3">{{2:column-paragraph}}</p>
                                 {{{2:column-copy}}}
@@ -78,7 +76,6 @@
                     <div class="pillar-item pillar-3 {{3:pillar-bgcolor}} {{3:type-disable-popup}}">
                         <div class="pillar-content">
                             <picture>
-
                                 <source class='hide-by-default show-element' srcset='{{3:img-id}}' media='(min-width:540px)' />
                                 <source class='hide-by-default show-element' srcset='{{3:img-id}}' media='(min-width:0)' /><img
                                     srcset='{{3:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
@@ -87,15 +84,14 @@
                             <p class="body-alt pt-2 c-paragraph-3">{{3:column-paragraph}}</p>
                             <div class="text-center mt-0">{{{3:links}}}</div>
                         </div>
-                        <div role="dialog" class="pillar-popup">
-
+                        <div role="dialog" class="pillar-popup" aria-labelledby="pillarPopup3_label" aria-modal="true">
                             <picture>
-
                                 <source class='hide-by-default show-element' srcset='{{3:img-id}}' media='(min-width:540px)' />
-                                <source class='hide-by-default show-element' srcset='{{3:img-id}}' media='(min-width:0)' /><img
-                                    srcset='{{3:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
-                                    alt="{{3:img-alt}}" src="{{3:img-id}}"></picture>
-                            <h3 class="column-title pt-0 pb-0 c-heading-5">{{3:column-title}}</h3>
+                                <source class='hide-by-default show-element' srcset='{{3:img-id}}' media='(min-width:0)' />
+                                <img srcset='{{3:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
+                                    alt="{{3:img-alt}}" src="{{3:img-id}}">
+                            </picture>
+                            <h3 id="pillarPopup3_label" class="column-title pt-0 pb-0 c-heading-5">{{3:column-title}}</h3>
                             <div class="body-alt">
                                 <p class="c-paragraph-3">{{3:column-paragraph}}</p>
                                 {{{3:column-copy}}}
@@ -110,7 +106,6 @@
                     <div class="pillar-item pillar-4 {{4:pillar-bgcolor}} {{4:type-disable-popup}}">
                         <div class="pillar-content">
                             <picture>
-
                                 <source class='hide-by-default show-element' srcset='{{4:img-id}}' media='(min-width:540px)' />
                                 <source class='hide-by-default show-element' srcset='{{4:img-id}}' media='(min-width:0)' /><img
                                     srcset='{{4:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
@@ -119,15 +114,13 @@
                             <p class="body-alt pt-2 c-paragraph-3">{{4:column-paragraph}}</p>
                             <div class="text-center mt-0">{{{4:links}}}</div>
                         </div>
-                        <div role="dialog" class="pillar-popup">
-
+                        <div role="dialog" class="pillar-popup" aria-labelledby="pillarPopup4_label" aria-modal="true">
                             <picture>
-
                                 <source class='hide-by-default show-element' srcset='{{4:img-id}}' media='(min-width:540px)' />
                                 <source class='hide-by-default show-element' srcset='{{4:img-id}}' media='(min-width:0)' /><img
                                     srcset='{{4:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
                                     alt="{{4:img-alt}}" src="{{4:img-id}}"></picture>
-                            <h3 class="column-title pt-0 pb-0 c-heading-5">{{4:column-title}}</h3>
+                            <h3 id="pillarPopup4_label" class="column-title pt-0 pb-0 c-heading-5">{{4:column-title}}</h3>
                             <div class="body-alt">
                                 <p>{{4:column-paragraph}}</p>
                                 {{{4:column-copy}}}
@@ -142,24 +135,23 @@
                     <div class="pillar-item pillar-5 {{5:pillar-bgcolor}} {{5:type-disable-popup}}">
                         <div class="pillar-content">
                             <picture>
-
                                 <source class='hide-by-default show-element' srcset='{{5:img-id}}' media='(min-width:540px)' />
-                                <source class='hide-by-default show-element' srcset='{{5:img-id}}' media='(min-width:0)' /><img
-                                    srcset='{{5:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
-                                    alt="{{5:img-alt}}" src="{{5:img-id}}"></picture>
+                                <source class='hide-by-default show-element' srcset='{{5:img-id}}' media='(min-width:0)' />
+                                <img srcset='{{5:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
+                                    alt="{{5:img-alt}}" src="{{5:img-id}}">
+                            </picture>
                             <h3 class="column-title pt-0 pb-0 c-heading-5">{{5:column-title}}</h3>
                             <p class="body-alt pt-2 c-paragraph-3">{{5:column-paragraph}}</p>
                             <div class="text-center mt-0">{{{5:links}}}</div>
                         </div>
-                        <div role="dialog" class="pillar-popup">
-
+                        <div role="dialog" class="pillar-popup" aria-labelledby="pillarPopup5_label" aria-modal="true">
                             <picture>
-
                                 <source class='hide-by-default show-element' srcset='{{5:img-id}}' media='(min-width:540px)' />
-                                <source class='hide-by-default show-element' srcset='{{5:img-id}}' media='(min-width:0)' /><img
-                                    srcset='{{5:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
-                                    alt="{{5:img-alt}}" src="{{5:img-id}}"></picture>
-                            <h3 class="column-title pt-0 pb-0 c-heading-5">{{5:column-title}}</h3>
+                                <source class='hide-by-default show-element' srcset='{{5:img-id}}' media='(min-width:0)' />
+                                <img srcset='{{5:img-id}}' class="display-inline-block  mb-2" data-desktop-class="display-inline-block  mb-2"
+                                    alt="{{5:img-alt}}" src="{{5:img-id}}">
+                            </picture>
+                            <h3 id="pillarPopup5_label" class="column-title pt-0 pb-0 c-heading-5">{{5:column-title}}</h3>
                             <div class="body-alt">
                                 <p class="c-paragraph-3">{{5:column-paragraph}}</p>
                                 {{{5:column-copy}}}
